<resources>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_hint">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_hint">New user? Register Here</string>
    <string name="email_address_hint">Email Address</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="bot_nav_title_home">Home</string>
    <string name="bot_nav_title_jobs">Jobs</string>
    <string name="bot_nav_title_trip">Trip</string>
    <string name="bot_nav_title_chats">Chat</string>
    <string name="bot_nav_title_profile">Profile</string>
    <string name="bot_nav">Bottom Navigation</string>
    <string name="sign_out">Sign Out</string>
    <string name="where_to">Where to?</string>
    <string name="next">Next</string>
    <string name="trip_request_main_title">Trip Request</string>
    <string name="trip_request_from">FROM</string>
    <string name="trip_request_to">TO</string>
    <string name="trip_request_luggages">LUGGAGES</string>
    <string name="trip_request_confirm">Confirm</string>
    <string name="trip_request_bidding_main_title">Trip Request Bidding</string>
    <string name="trip_request_bidding_cancel">CANCEL REQUEST</string>
    <string name="app_name">viaPorter</string>
    <string name="trip_request_broadcasted_title">Broadcasted Requests</string>
    <string name="trip_request_current_bids_title">Current Bids</string>
    <string name="profile_title">Profile</string>
    <string name="profile_language">Language</string>
    <string name="profile_currency">Currency</string>
    <string name="profile_reminders">Reminder</string>
    <string name="profile_privacy_policy">Privacy Policy</string>
    <string name="withdraw">Withdraw</string>
    <string name="change">Change</string>
    <string name="bid">Bid</string>
    <string name="porter">viaPorter</string>
    <string name="user_location_access_denied">User Location Access Denied</string>
    <string name="profile_sign_out_msg">Are you sure you want to sign out?</string>
    <string name="reject">Reject</string>
    <string name="edit_bid">Edit Bid</string>
    <string name="cancel">Cancel</string>
    <string name="trip_confirmed_main_title">Trip Confirmed</string>
    <string name="trip_confirmed_find_patron">Please Proceed to find your Patron</string>
    <string name="trip_confirmed_arrived_at_patron">You have arrived at your Patron\'s location.</string>
    <string name="trip_confirmed_button_start_trip">START TRIP</string>
    <string name="trip_confirmed_button_cancel_trip">CANCEL TRIP</string>
    <string name="trip_confirmed_button_stop_title">STOP TRIP</string>
    <string name="trip_confirmed_button_stop_msg">Are you sure you want to end your trip?</string>
    <string name="trip_confirmed_button_cancel_msg">Trip has already started. Are you sure you want to cancel?</string>
    <string name="trip_confirmed_button_start_confirm_trip">Press again to confirm</string>
    <string name="trip_confirmed_button_stop_trip">Stop Trip</string>
    <string name="trip_confirmed_trip_in_progress">Trip In Progress</string>
    <string name="trip_review_popup_title">Your Trip</string>
    <string name="trip_request_item_luggage">Luggage</string>
    <string name="trip_request_item_weight">Weight</string>

    <!--Taken from google quickstart guide for Phone Auth-->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="login_send_verification_code">Send Verification Code</string>
    <string name="chat_type_your_message">Type your message</string>
    <string name="chat_title">Chat</string>
    <string name="trip_request_bid">Bid</string>
    <string name="trip_request_enter_bid_amount">Default Bid / Enter Bid Amount</string>
</resources>
