<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item-->
            <!--android:id="@+id/navigation_trip"-->
            <!--android:icon="@drawable/ic_business_center_black_24dp"-->
            <!--android:title="@string/bot_nav_title_home" />-->

    <item
            android:id="@+id/navigation_jobs"
            android:icon="@drawable/ic_add_alert_black_24dp"
            android:title="@string/bot_nav_title_jobs" />

    <item
            android:id="@+id/navigation_chats"
            android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
            android:title="@string/bot_nav_title_chats" />

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/bot_nav_title_profile" />
</menu>