<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/login_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/splash"/>

        <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:layout_centerInParent="true"
                android:layout_below="@id/login_banner"
                android:layout_marginTop="4dp"/>

        <TextView
                android:id="@+id/login_username"
                android:layout_width="335dp"
                android:layout_height="46dp"
                android:layout_below="@+id/login_title"
                android:background="@drawable/rounded_corner"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

        <EditText
                android:id="@+id/login_username_field"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_below="@+id/login_title"
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:inputType="text"
                android:hint="@string/username_hint"/>

        <TextView
                android:id="@+id/login_password"
                android:layout_width="335dp"
                android:layout_height="46dp"
                android:layout_below="@+id/login_username"
                android:background="@drawable/rounded_corner"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

        <EditText
                android:id="@+id/login_password_field"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_below="@+id/login_username"
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>

        <FrameLayout
                android:id="@+id/login_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/login_password"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

            <TextView
                    android:id="@+id/screen1_tv_signIn"
                    android:layout_width="335dp"
                    android:layout_height="46dp"
                    android:background="@drawable/rounded_corner_accent"/>

            <TextView
                    android:id="@+id/screen1_tv_signIn_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/sign_in_hint"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite"/>

        </FrameLayout>

        <EditText
                android:id="@+id/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:layout_below="@id/login_button"
                android:layout_centerInParent="true"/>

        <TextView
                android:id="@+id/registration_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_hint"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:layout_below="@id/login_forgot_password"
                android:layout_centerInParent="true"/>

    </RelativeLayout>



</LinearLayout>