<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="top"
            android:background="@drawable/rounded_corner">

        <TextView
                android:id="@+id/text_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trip_request_main_title"
                android:textAlignment="center"
                android:textSize="30sp"/>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/broadcasted_trip_requests"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/colorPrimaryGrey">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:background="@drawable/ic_broadcasted_black_24dp"/>

        <TextView
                android:id="@+id/text_view_id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trip_request_broadcasted_title"
                android:textSize="24sp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:background="@drawable/ic_refresh_black_24dp"/>
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/broadcast_request_table"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <FrameLayout
            android:id="@+id/Current_Bids"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/colorPrimaryGrey">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:background="@drawable/ic_auction_black_24dp"/>

        <TextView
                android:id="@+id/text_view_id3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trip_request_current_bids_title"
                android:textSize="24sp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:background="@drawable/ic_refresh_black_24dp"/>
    </FrameLayout>
</LinearLayout>
