<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.viapatron2.SignInFragment">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/screen1_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/screen1_banner"/>

        <TextView
                android:id="@+id/screen1_tv_viaPatron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="viaPatron"
                android:textSize="30dp"
                android:layout_centerInParent="true"
                android:layout_below="@id/screen1_banner"
                android:layout_marginVertical="4dp"/>


        <TextView
                android:id="@+id/screen1_tv_name"
                android:layout_width="335dp"
                android:layout_height="46dp"
                android:layout_below="@+id/screen1_tv_viaPatron"
                android:background="@drawable/rounded_corner"
                android:layout_centerInParent="true"
                android:layout_marginVertical="4dp"/>

        <EditText
                android:id="@+id/screen1_name_field"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_below="@+id/screen1_tv_viaPatron"
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:layout_marginVertical="4dp"
                android:gravity="center"
                android:inputType="text"
                android:hint="@string/name_hint"/>

        <TextView
                android:id="@+id/screen1_tv_password"
                android:layout_width="335dp"
                android:layout_height="46dp"
                android:layout_below="@+id/screen1_tv_name"
                android:background="@drawable/rounded_corner"
                android:layout_centerInParent="true"
                android:layout_marginVertical="4dp"/>

        <EditText
                android:id="@+id/screen1_password_field"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_below="@+id/screen1_tv_name"
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:layout_marginVertical="4dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>

        <FrameLayout
                android:id="@+id/screen1_layout_signIn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/screen1_tv_password"
                android:layout_centerInParent="true"
                android:layout_marginVertical="4dp">

            <TextView
                    android:id="@+id/screen1_tv_signIn"
                    android:layout_width="335dp"
                    android:layout_height="46dp"
                    android:background="@drawable/rounded_corner_accent"/>

            <TextView
                    android:id="@+id/screen1_tv_signIn_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/sign_in_hint"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"/>

        </FrameLayout>

        <EditText
                android:id="@+id/screen1_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:layout_below="@id/screen1_layout_signIn"
                android:layout_centerInParent="true"/>

    </RelativeLayout>

</FrameLayout>
